--- a/ceph/config/definitions/ceph.yml
+++ b/ceph/config/definitions/ceph.yml
@@ -20,7 +20,7 @@
       - string:
           name: BRANCH
           description: "The git branch (or tag) to build"
-          default: master
+          default: main
 
       - bool:
           name: TEST
