--- a/ceph-dev-cron/config/definitions/ceph-dev-cron.yml
+++ b/ceph-dev-cron/config/definitions/ceph-dev-cron.yml
@@ -29,7 +29,7 @@
           url: https://github.com/ceph/ceph
           browser: auto
           branches:
-            - origin/master
+            - origin/main
             - origin/pacific
             - origin/octopus
             - origin/nautilus
@@ -118,12 +118,12 @@
                     DISTROS=centos8
                     FLAVOR=crimson
                     ARCHS=x86_64
-      # build master on:
+      # build main on:
       # default: focal centos8 windows
       # crimson: centos8
       - conditional-step:
           condition-kind: regex-match
-          regex: .*master.*
+          regex: .*main.*
           label: '${GIT_BRANCH}'
           on-evaluation-failure: dont-run
           steps:
