--- a/ceph-windows-pull-requests/config/definitions/ceph-windows-pull-requests.yml
+++ b/ceph-windows-pull-requests/config/definitions/ceph-windows-pull-requests.yml
@@ -35,7 +35,7 @@
           org-list:
             - ceph
           white-list-target-branches:
-            - master
+            - main
           trigger-phrase: 'jenkins test windows'
           skip-build-phrase: '^jenkins do not test.*'
           only-trigger-phrase: false
